--- a/index.html
+++ b/index.html
@@ -203,13 +203,102 @@
   </div>
 </section>
 
-<!--<section class="work" id="work">
+<<section class="work" id="work">
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
   <div class="box-container">
-
+    <div class="box tilt" data-sr-id="40" style="visibility: visible; opacity: 1; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+  <img draggable="false" src="./assets/images/slideshow.png" alt="project">
+  <div class="content">
+    <div class="tag">
+    <h3>Slideshow transition .js</h3>
+    </div>
+    <div class="desc">
+      <p>Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO</p>
+      <div class="btns">
+        <a href="./assets/work/Web idol/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+      </div>
+    </div>
   </div>
-</section> -->
+</div>
+    <div class="box tilt" data-sr-id="41" style="visibility: visible; opacity: 1; transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1); transition: all 0.2s linear 0s, opacity 1s cubic-bezier(0.5, 0, 0, 1) 0s, transform 1s cubic-bezier(0.5, 0, 0, 1) 0s;">
+  <img draggable="false" src="./assets/images/shop.png" alt="project">
+  <div class="content">
+    <div class="tag">
+    <h3>Shop .js</h3>
+    </div>
+    <div class="desc">
+      <p>Full-Stack Flipkart with Admin Dashboard and Paytm Payment Gateway. MERN Stack WebApp, ready to use for business.</p>
+      <div class="btns">
+        <a href="./assets/work/Web shop/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+    <div class="box tilt" data-sr-id="42" style="visibility: visible; opacity: 1; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+  <img draggable="false" src="./assets/images/Slider.png" alt="project">
+  <div class="content">
+    <div class="tag">
+    <h3>Slide img .js</h3>
+    </div>
+    <div class="desc">
+      <p>ReactJS Basic Resume Generator which will generate customized resume in few minutes on your requirements.</p>
+      <div class="btns">
+        <a href="./assets/work/Web idol bts/index1.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+    <div class="box tilt" data-sr-id="43" style="visibility: visible; opacity: 1; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+  <img draggable="false" src="./assets/images/jett.png" alt="project">
+  <div class="content">
+    <div class="tag">
+    <h3>Web game</h3>
+    </div>
+    <div class="desc">
+      <p>Full-Stack project dashboard which is collection of projects built on the React library.</p>
+      <div class="btns">
+        <a href="./assets/work/WebJett/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+    <div class="box tilt" data-sr-id="44" style="visibility: visible; opacity: 1; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform; transition: all 300ms cubic-bezier(0.03, 0.98, 0.52, 0.99) 0s;">
+  <img draggable="false" src="./assets/images/image.png" alt="project">
+  <div class="content">
+    <div class="tag">
+    <h3>Font-end Test .js</h3>
+    </div>
+    <div class="desc">
+      <p>Full-Stack Flipkart Clone Using LAMP Stack. With all major features and OTP authentication and Cashfree payment gateway.</p>
+      <div class="btns">
+        <a href="./assets/work/Web fontend/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
+   <!--<div class="box tilt" data-sr-id="45" style="visibility: visible; opacity: 1; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform;">
+  <img draggable="false" src="/assets/images/projects/jspro.png" alt="project">
+  <div class="content">
+    <div class="tag">
+    <h3>JavaScript Projects Website</h3>
+    </div>
+    <div class="desc">
+      <p>This website is specially build to showcase all major javaScript projects. All my javaScript based projects are in it.</p>
+      <div class="btns">
+        <a href="https://jigar-sable.github.io/JavaScript-Projects" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
+        <a href="https://github.com/jigar-sable/JavaScript-Projects" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+      </div>
+    </div>
+  </div> 
+</div>-->
+</div>
+</section>
 
 
 <section class="experience" id="experience">
