--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <h3>Slideshow transition .js</h3>
     </div>
     <div class="desc">
-      <p>Full-Stack Instagram clone built using MERN stack and realtime chat with the help of socket.iO</p>
+      <p>transition auto slide img with js</p>
       <div class="btns">
         <a href="./assets/work/Web idol/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
         <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -229,7 +229,7 @@
     <h3>Shop .js</h3>
     </div>
     <div class="desc">
-      <p>Full-Stack Flipkart with Admin Dashboard and Paytm Payment Gateway. MERN Stack WebApp, ready to use for business.</p>
+      <p>use .js change color object and blackground</p>
       <div class="btns">
         <a href="./assets/work/Web shop/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
         <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -244,7 +244,7 @@
     <h3>Slide img .js</h3>
     </div>
     <div class="desc">
-      <p>ReactJS Basic Resume Generator which will generate customized resume in few minutes on your requirements.</p>
+      <p>card slide img with .js</p>
       <div class="btns">
         <a href="./assets/work/Web idol bts/index1.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
         <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -259,7 +259,7 @@
     <h3>Web game</h3>
     </div>
     <div class="desc">
-      <p>Full-Stack project dashboard which is collection of projects built on the React library.</p>
+      <p>web show Design</p>
       <div class="btns">
         <a href="./assets/work/WebJett/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
         <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -271,10 +271,10 @@
   <img draggable="false" src="./assets/images/image.png" alt="project">
   <div class="content">
     <div class="tag">
-    <h3>Font-end Test .js</h3>
+    <h3>Front-end Test .js</h3>
     </div>
     <div class="desc">
-      <p>Full-Stack Flipkart Clone Using LAMP Stack. With all major features and OTP authentication and Cashfree payment gateway.</p>
+      <p>Front-end test with css and .js form frontendmentor website</p>
       <div class="btns">
         <a href="./assets/work/Web fontend/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
         <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
@@ -381,7 +381,7 @@
 
   <div class="box">
     <h3>contact info</h3>
-    <p> <i class="fas fa-phone"></i>+90-426-8712</p>
+    <p> <i class="fas fa-phone"></i>+66 90-426-8712</p>
     <p> <i class="fas fa-envelope"></i>Angkit.thep@gmail.com</p>
     <p> <i class="fas fa-map-marked-alt"></i>Ayutthaya, Thailand - 13160</p>
     <div class="share">
