--- a/assets/work/Web fontend/index.html
+++ b/assets/work/Web fontend/index.html
@@ -39,7 +39,7 @@
 <div class="info5">
   <form>
   <h1>Email address</h1>
-  <input type="email" placeholder="email@company.com">
+  <input type="email" placeholder="email@company.com" required>
   <button type="submit">Subscribe to monthly newsletter</button>
 </form>
 </div>
