--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       <p>transition auto slide img with js</p>
       <div class="btns">
         <a href="./assets/work/Web idol/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+        <a href="https://github.com/RainySG/Slideshow-transition" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
       </div>
     </div>
   </div>
@@ -232,7 +232,7 @@
       <p>use .js change color object and blackground</p>
       <div class="btns">
         <a href="./assets/work/Web shop/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+        <a href="https://github.com/RainySG/Shop-js" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
       </div>
     </div>
   </div>
@@ -247,7 +247,7 @@
       <p>card slide img with .js</p>
       <div class="btns">
         <a href="./assets/work/Web idol bts/index1.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+        <a href="https://github.com/RainySG/Slide-js" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
       </div>
     </div>
   </div>
@@ -262,7 +262,7 @@
       <p>web show Design</p>
       <div class="btns">
         <a href="./assets/work/WebJett/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+        <a href="https://github.com/RainySG/Webgame" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
       </div>
     </div>
   </div>
@@ -277,7 +277,7 @@
       <p>Front-end test with css and .js form frontendmentor website</p>
       <div class="btns">
         <a href="./assets/work/Web fontend/index.html" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>
-        <a href="" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+        <a href="https://github.com/RainySG/Front-end-Test" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
       </div>
     </div>
   </div>
