--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body oncontextmenu="return false">
         <header>
-            <a href="/" class="logo"><i class='bx bxl-codepen'></i>Angkit</a>
+            <a href="#" class="logo"><i class='bx bxl-codepen'></i>Angkit</a>
 
             <div id="menu" class="fas fa-bars"></div>
             <nav class="navbar">
