--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Portfolio | Angkit Thepvorawut</title>
     </head>
-    <body oncontextmenu="return false">
+    <body>
         <header>
             <a href="#home" class="logo"><i class='bx bxl-codepen'></i>Angkit</a>
 
@@ -129,24 +129,7 @@
                   <span>ReactJS</span>
                 </div>
               </div>
-             <!-- <div class="bar">
-                <div class="info">
-                  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d5/Tailwind_CSS_Logo.svg/48px-Tailwind_CSS_Logo.png"/>
-                  <span>TailwindCSS</span>
-                </div>
-              </div>-->
-             <!--  <div class="bar">
-                <div class="info">
-                  <img src="https://img.icons8.com/color/48/000000/nodejs.png"/>
-                  <span>NodeJS</span>
-                </div>
-              </div>-->
-              <!--<div class="bar">
-                <div class="info">
-                  <img src="https://img.icons8.com/ios-filled/48/1169ae/jquery.png"/>
-                  <span>jQuery</span>
-                </div>
-              </div>-->
+             
               <div class="bar">
                 <div class="info">
                   <img src="https://img.icons8.com/glyph-neue/48/ffffff/github.png"/>
