--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
   </div>
 </section>
 
-<<section class="work" id="work">
+<section class="work" id="work">
   <h2 class="heading"><i class="fas fa-laptop-code"></i> Projects <span>Made</span></h2>
 
   <div class="box-container">
