--- a/index.html
+++ b/index.html
@@ -265,6 +265,21 @@
     </div>
   </div>
 </div>
+
+<div class="box tilt" data-sr-id="45" style="visibility: visible; opacity: 1; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1); will-change: transform; transition: all 300ms cubic-bezier(0.03, 0.98, 0.52, 0.99) 0s;">
+  <img draggable="false" src="./assets/images/image (2).png" alt="project">
+  <div class="content">
+    <div class="tag">
+    <h3>API Covid19</h3>
+    </div>
+    <div class="desc">
+      <p>Show use API in react</p>
+      <div class="btns">
+        <a href="https://github.com/RainySG/covid19" class="btn" target="_blank">Code <i class="fas fa-code"></i></a>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 </section>
 
