--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </a>
                 </div>
                 <div class="cvbtn">
-                  <a href="https://drive.google.com/file/d/1Hn6npLjogRDlbSDouPoMxyBGAgw4HVrZ/view?usp=drive_link" target="_blank" class="btn"><span>CV</span>
+                  <a href="https://drive.google.com/file/d/1TGh8Io7D7wel8_cazuetVm65XT1otnDR/view?usp=sharing" target="_blank" class="btn"><span>CV</span>
                       <i class="fas fa-chevron-right"></i>
                   </a>
               </div>
